# Reality-Cpp

./: .gitattributes  .gitignore  CMakeLists.txt  RealityCpp.sln  readme.md
Debug/: RealityCpp.ilk
RealityCpp/: FurnaceBlock.cpp  FurnaceBlock.h  FurnaceItem.cpp  FurnaceItem.h  Main.cpp  Main.h  RealityCpp.vcxproj  RealityCpp.vcxproj.filters
RealityCpp/Debug/: vc140.idb
RealityCpp/Debug/RealityCpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RealityCpp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RealityCpp/Release/RealityCpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RealityCpp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: RealityCpp.iobj  RealityCpp.ipdb
